# jump-diffusion-estimation

./: .gitignore  .readthedocs.yaml  .zenodo.json  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  Setup.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  draft-pdf.yml  publish.yml
docs/: conf.py  index.rst  installation.rst  quickstart.rst
docs/api/: index.rst
examples/: basic_usage.py  validation_experiment.py
notebooks/: complete_tutorial.ipynb  complete_tutorial_spanish.ipynb  differential_evolution_showcase.ipynb  differential_evolution_showcase_en.ipynb  differential_evolution_showcase_spanish.ipynb  getting_started.ipynb  getting_started_spanish.ipynb  jump_diffusion_playground.ipynb  jump_diffusion_playground_en.ipynb  jump_diffusion_playground_spanish.ipynb  sp500_case_study.ipynb  sp500_case_study_spanish.ipynb  sp500_jump_diffusion_example.ipynb  sp500_jump_diffusion_example_en.ipynb  sp500_jump_diffusion_example_spanish.ipynb  tutorial_completo.ipynb  tutorial_completo_en.ipynb
paper/: paper.bib  paper.md
paper/working-paper/: README.md  main.tex  references.bib
paper/working-paper/sections/: 01-introduction.tex  02-model.tex  03-distributions.tex  04-fft.tex  05-estimation.tex  06-inference.tex  07-jump-test.tex  08-comparison.tex  09-closing.tex
scripts/: run_validation.py
src/jump_diffusion/: __init__.py
src/jump_diffusion/distributions/: __init__.py  base.py  kou.py  normal.py  sged.py  skew_normal.py  student_t.py
src/jump_diffusion/estimation/: __init__.py  base_estimator.py  maximum_likelihood.py
src/jump_diffusion/models/: __init__.py  base_model.py  jump_diffusion.py
src/jump_diffusion/scripts/: __init__.py  benchmark.py  validate.py
src/jump_diffusion/simulation/: __init__.py  base_simulator.py  jump_diffusion_simulator.py
src/jump_diffusion/validation/: __init__.py  (+3 more)
tests/test_distributions/: test_fft_convolution.py  test_kou.py  test_moments.py  test_normal.py  test_sged.py  test_skew_normal.py  test_student_t.py
tests/test_estimation/: test_bootstrap_standard_errors.py  test_diagnostics_moments.py  test_differential_evolution.py  test_jump_test.py  test_maximum_likelihood.py  test_standard_errors.py  test_summary.py  test_wald_standard_errors.py
tests/test_models/: test_jump_diffusion.py
tests/test_simulation/: test_jump_diffusion_simulator.py
tests/test_validation/: test_distribution_comparison.py  test_monte_carlo.py  test_rel_error_zero_truth.py
